Revert "fix EV-10095: fixed spacing"
This reverts commit dec944ec3a7cc19302d8a0d71989afc4db79eaec.

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
 @layer base {
     * {
         color: var(--colors-text-primary-default);
+        margin: 0;
+        padding: 0;
         word-break: var(--global-word-break);
         line-break: var(--global-line-break);
     }
